// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Results Processor should have valid test data to start with 1`] = `
Object {
  "numFailedTestSuites": 1,
  "numFailedTests": 6,
  "numPassedTestSuites": 0,
  "numPassedTests": 0,
  "numPendingTestSuites": 0,
  "numPendingTests": 0,
  "numRuntimeErrorTestSuites": 0,
  "numTodoTests": 0,
  "numTotalTestSuites": 0,
  "numTotalTests": 6,
  "openHandles": Array [],
  "snapshot": Object {
    "added": 0,
    "didUpdate": false,
    "failure": false,
    "filesAdded": 0,
    "filesRemoved": 0,
    "filesRemovedList": Array [],
    "filesUnmatched": 0,
    "filesUpdated": 0,
    "matched": 0,
    "total": 0,
    "unchecked": 0,
    "uncheckedKeysByFile": Array [],
    "unmatched": 0,
    "updated": 0,
  },
  "startTime": 0,
  "success": true,
  "testResults": Array [
    Object {
      "leaks": false,
      "numFailingTests": 6,
      "numPassingTests": 0,
      "numPendingTests": 0,
      "numTodoTests": 0,
      "openHandles": Array [],
      "perfStats": Object {
        "end": 0,
        "runtime": 0,
        "slow": false,
        "start": 0,
      },
      "skipped": false,
      "snapshot": Object {
        "added": 0,
        "fileDeleted": false,
        "matched": 0,
        "unchecked": 0,
        "uncheckedKeys": Array [],
        "unmatched": 0,
        "updated": 0,
      },
      "testFilePath": "/test/data/sa11y-auto-checks.js",
      "testResults": Array [
        Object {
          "ancestorTitles": Array [
            "sa11y",
          ],
          "failureDetails": Array [
            [A11yError: 5 Accessibility issues found
 * (document-title) Documents must have <title> element to aid in navigation: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.3/document-title

* (html-has-lang) <html> element must have a lang attribute: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.3/html-has-lang

* (link-name) Links must have discernible text: a
	- Help URL: https://dequeuniversity.com/rules/axe/4.3/link-name

* (landmark-one-main) Document should have one main landmark: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.3/landmark-one-main

* (page-has-heading-one) Page should contain a level-one heading: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.3/page-has-heading-one],
          ],
          "fullName": "A11yError-0",
          "status": "failed",
        },
        Object {
          "ancestorTitles": Array [
            "sa11y",
          ],
          "failureDetails": Array [
            [A11yError: 1 Accessibility issues found
 * (html-has-lang) <html> element must have a lang attribute: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.3/html-has-lang],
          ],
          "fullName": "A11yError-1",
          "status": "failed",
        },
        Object {
          "ancestorTitles": Array [
            "sa11y",
          ],
          "failureDetails": Array [
            [A11yError: 5 Accessibility issues found
 * (document-title) Documents must have <title> element to aid in navigation: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.3/document-title

* (html-has-lang) <html> element must have a lang attribute: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.3/html-has-lang

* (link-name) Links must have discernible text: a
	- Help URL: https://dequeuniversity.com/rules/axe/4.3/link-name

* (landmark-one-main) Document should have one main landmark: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.3/landmark-one-main

* (page-has-heading-one) Page should contain a level-one heading: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.3/page-has-heading-one],
          ],
          "fullName": "A11yError-2",
          "status": "failed",
        },
        Object {
          "ancestorTitles": Array [
            "sa11y",
          ],
          "failureDetails": Array [
            [A11yError: 1 Accessibility issues found
 * (html-has-lang) <html> element must have a lang attribute: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.3/html-has-lang],
          ],
          "fullName": "A11yError-3",
          "status": "failed",
        },
        Object {
          "ancestorTitles": Array [
            "sa11y",
          ],
          "failureDetails": Array [
            [A11yError: 6 Accessibility issues found
 * (document-title) Documents must have <title> element to aid in navigation: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.3/document-title

* (html-has-lang) <html> element must have a lang attribute: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.3/html-has-lang

* (link-name) Links must have discernible text: a
	- Help URL: https://dequeuniversity.com/rules/axe/4.3/link-name

* (landmark-one-main) Document should have one main landmark: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.3/landmark-one-main

* (page-has-heading-one) Page should contain a level-one heading: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.3/page-has-heading-one

* (html-has-lang) <html> element must have a lang attribute: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.3/html-has-lang],
          ],
          "fullName": "A11yError-4",
          "status": "failed",
        },
        Object {
          "ancestorTitles": Array [
            "sa11y",
          ],
          "failureDetails": Array [
            [Error: foo],
          ],
          "fullName": "Error-5",
          "status": "failed",
        },
      ],
    },
  ],
  "wasInterrupted": false,
}
`;

exports[`Results Processor should process test results as expected 1`] = `
Object {
  "numFailedTestSuites": 5,
  "numFailedTests": 5,
  "numPassedTestSuites": 0,
  "numPassedTests": 0,
  "numPendingTestSuites": 0,
  "numPendingTests": 0,
  "numRuntimeErrorTestSuites": 0,
  "numTodoTests": 0,
  "numTotalTestSuites": 0,
  "numTotalTests": 5,
  "openHandles": Array [],
  "snapshot": Object {
    "added": 0,
    "didUpdate": false,
    "failure": false,
    "filesAdded": 0,
    "filesRemoved": 0,
    "filesRemovedList": Array [],
    "filesUnmatched": 0,
    "filesUpdated": 0,
    "matched": 0,
    "total": 0,
    "unchecked": 0,
    "uncheckedKeysByFile": Array [],
    "unmatched": 0,
    "updated": 0,
  },
  "startTime": 0,
  "success": true,
  "testResults": Array [
    Object {
      "leaks": false,
      "numFailingTests": 1,
      "numPassingTests": 0,
      "numPendingTests": 0,
      "numTodoTests": 0,
      "openHandles": Array [],
      "perfStats": Object {
        "end": 0,
        "runtime": 0,
        "slow": false,
        "start": 0,
      },
      "skipped": false,
      "snapshot": Object {
        "added": 0,
        "fileDeleted": false,
        "matched": 0,
        "unchecked": 0,
        "uncheckedKeys": Array [],
        "unmatched": 0,
        "updated": 0,
      },
      "testFilePath": "/test/data/sa11y-auto-checks.js::SA11Y-WCAG-SC2.4.2-P2",
      "testResults": Array [
        Object {
          "ancestorTitles": Array [
            "sa11y",
            "A11yError-0",
          ],
          "failureDetails": Array [],
          "failureMessages": Array [
            "Accessibility issues found: Documents must have <title> element to aid in navigation
Help: https://dequeuniversity.com/rules/axe/4.3/document-title
CSS Selectors: html
HTML element: <html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>
Tests: \\"A11yError-0\\"
Summary: Fix any of the following:
  Document does not have a non-empty <title> element",
          ],
          "fullName": "Documents must have <title> element to aid in navigation::html",
          "status": "failed",
        },
      ],
    },
    Object {
      "leaks": false,
      "numFailingTests": 1,
      "numPassingTests": 0,
      "numPendingTests": 0,
      "numTodoTests": 0,
      "openHandles": Array [],
      "perfStats": Object {
        "end": 0,
        "runtime": 0,
        "slow": false,
        "start": 0,
      },
      "skipped": false,
      "snapshot": Object {
        "added": 0,
        "fileDeleted": false,
        "matched": 0,
        "unchecked": 0,
        "uncheckedKeys": Array [],
        "unmatched": 0,
        "updated": 0,
      },
      "testFilePath": "/test/data/sa11y-auto-checks.js::SA11Y-WCAG-SC3.1.1-P2",
      "testResults": Array [
        Object {
          "ancestorTitles": Array [
            "sa11y",
            "A11yError-0",
          ],
          "failureDetails": Array [],
          "failureMessages": Array [
            "Accessibility issues found: <html> element must have a lang attribute
Help: https://dequeuniversity.com/rules/axe/4.3/html-has-lang
CSS Selectors: html
HTML element: <html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>
Tests: \\"A11yError-0\\"
Summary: Fix any of the following:
  The <html> element does not have a lang attribute",
          ],
          "fullName": "<html> element must have a lang attribute::html",
          "status": "failed",
        },
      ],
    },
    Object {
      "leaks": false,
      "numFailingTests": 1,
      "numPassingTests": 0,
      "numPendingTests": 0,
      "numTodoTests": 0,
      "openHandles": Array [],
      "perfStats": Object {
        "end": 0,
        "runtime": 0,
        "slow": false,
        "start": 0,
      },
      "skipped": false,
      "snapshot": Object {
        "added": 0,
        "fileDeleted": false,
        "matched": 0,
        "unchecked": 0,
        "uncheckedKeys": Array [],
        "unmatched": 0,
        "updated": 0,
      },
      "testFilePath": "/test/data/sa11y-auto-checks.js::SA11Y-WCAG-SC4.1.2-P1",
      "testResults": Array [
        Object {
          "ancestorTitles": Array [
            "sa11y",
            "A11yError-0",
          ],
          "failureDetails": Array [],
          "failureMessages": Array [
            "Accessibility issues found: Links must have discernible text
Help: https://dequeuniversity.com/rules/axe/4.3/link-name
CSS Selectors: a
HTML element: <a href=\\"#\\"></a>
Tests: \\"A11yError-0\\"
Summary: Fix all of the following:
  Element is in tab order and does not have accessible text

Fix any of the following:
  Element does not have text that is visible to screen readers
  aria-label attribute does not exist or is empty
  aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
  Element has no title attribute",
          ],
          "fullName": "Links must have discernible text::a",
          "status": "failed",
        },
      ],
    },
    Object {
      "leaks": false,
      "numFailingTests": 1,
      "numPassingTests": 0,
      "numPendingTests": 0,
      "numTodoTests": 0,
      "openHandles": Array [],
      "perfStats": Object {
        "end": 0,
        "runtime": 0,
        "slow": false,
        "start": 0,
      },
      "skipped": false,
      "snapshot": Object {
        "added": 0,
        "fileDeleted": false,
        "matched": 0,
        "unchecked": 0,
        "uncheckedKeys": Array [],
        "unmatched": 0,
        "updated": 0,
      },
      "testFilePath": "/test/data/sa11y-auto-checks.js::SA11Y-WCAG-SC4.1.1-P3",
      "testResults": Array [
        Object {
          "ancestorTitles": Array [
            "sa11y",
            "A11yError-0",
          ],
          "failureDetails": Array [],
          "failureMessages": Array [
            "Accessibility issues found: Document should have one main landmark
Help: https://dequeuniversity.com/rules/axe/4.3/landmark-one-main
CSS Selectors: html
HTML element: <html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>
Tests: \\"A11yError-0\\"
Summary: Fix all of the following:
  Document does not have a main landmark",
          ],
          "fullName": "Document should have one main landmark::html",
          "status": "failed",
        },
      ],
    },
    Object {
      "leaks": false,
      "numFailingTests": 1,
      "numPassingTests": 0,
      "numPendingTests": 0,
      "numTodoTests": 0,
      "openHandles": Array [],
      "perfStats": Object {
        "end": 0,
        "runtime": 0,
        "slow": false,
        "start": 0,
      },
      "skipped": false,
      "snapshot": Object {
        "added": 0,
        "fileDeleted": false,
        "matched": 0,
        "unchecked": 0,
        "uncheckedKeys": Array [],
        "unmatched": 0,
        "updated": 0,
      },
      "testFilePath": "/test/data/sa11y-auto-checks.js::SA11Y-WCAG-SC1.3.1-P2",
      "testResults": Array [
        Object {
          "ancestorTitles": Array [
            "sa11y",
            "A11yError-0",
          ],
          "failureDetails": Array [],
          "failureMessages": Array [
            "Accessibility issues found: Page should contain a level-one heading
Help: https://dequeuniversity.com/rules/axe/4.3/page-has-heading-one
CSS Selectors: html
HTML element: <html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>
Tests: \\"A11yError-0\\"
Summary: Fix all of the following:
  Page must have a level-one heading",
          ],
          "fullName": "Page should contain a level-one heading::html",
          "status": "failed",
        },
      ],
    },
  ],
  "wasInterrupted": false,
}
`;

exports[`a11y Results Formatter should format a11y issues as expected with default options for dom 0 1`] = `
"* (document-title) Documents must have <title> element to aid in navigation: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.3/document-title

* (link-name) Links must have discernible text: a
	- Help URL: https://dequeuniversity.com/rules/axe/4.3/link-name

* (landmark-one-main) Document should have one main landmark: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.3/landmark-one-main

* (page-has-heading-one) Page should contain a level-one heading: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.3/page-has-heading-one"
`;

exports[`a11y Results Formatter should format a11y issues as expected with default options for dom 0 2`] = `4`;

exports[`a11y Results Formatter should format a11y issues as expected with default options for dom 0 3`] = `
"4 Accessibility issues found
 * (document-title) Documents must have <title> element to aid in navigation: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.3/document-title

* (link-name) Links must have discernible text: a
	- Help URL: https://dequeuniversity.com/rules/axe/4.3/link-name

* (landmark-one-main) Document should have one main landmark: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.3/landmark-one-main

* (page-has-heading-one) Page should contain a level-one heading: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.3/page-has-heading-one"
`;

exports[`a11y Results Formatter should format a11y issues as expected with default options for dom 1 1`] = `""`;

exports[`a11y Results Formatter should format a11y issues as expected with default options for dom 1 2`] = `0`;

exports[`a11y Results Formatter should format a11y issues as expected with default options for dom 1 3`] = `
"0 Accessibility issues found
 "
`;

exports[`a11y Results Formatter should format using specified options: 0 1`] = `"[{\\"id\\":\\"document-title\\",\\"impact\\":\\"serious\\",\\"tags\\":[\\"cat.text-alternatives\\",\\"wcag2a\\",\\"wcag242\\",\\"ACT\\"],\\"description\\":\\"Ensures each HTML document contains a non-empty <title> element\\",\\"help\\":\\"Documents must have <title> element to aid in navigation\\",\\"helpUrl\\":\\"https://dequeuniversity.com/rules/axe/4.3/document-title?application=axeAPI\\",\\"nodes\\":[{\\"any\\":[{\\"id\\":\\"doc-has-title\\",\\"data\\":null,\\"relatedNodes\\":[],\\"impact\\":\\"serious\\",\\"message\\":\\"Document does not have a non-empty <title> element\\"}],\\"all\\":[],\\"none\\":[],\\"impact\\":\\"serious\\",\\"html\\":\\"<html lang=\\\\\\"en\\\\\\"><head></head><body>\\\\n\\\\n<div id=\\\\\\"dom-with-issues\\\\\\">\\\\n    <a href=\\\\\\"#\\\\\\"></a>\\\\n</div>\\\\n\\\\n\\\\n</body></html>\\",\\"target\\":[\\"html\\"],\\"failureSummary\\":\\"Fix any of the following:\\\\n  Document does not have a non-empty <title> element\\"}]},{\\"id\\":\\"link-name\\",\\"impact\\":\\"serious\\",\\"tags\\":[\\"cat.name-role-value\\",\\"wcag2a\\",\\"wcag412\\",\\"wcag244\\",\\"section508\\",\\"section508.22.a\\",\\"ACT\\"],\\"description\\":\\"Ensures links have discernible text\\",\\"help\\":\\"Links must have discernible text\\",\\"helpUrl\\":\\"https://dequeuniversity.com/rules/axe/4.3/link-name?application=axeAPI\\",\\"nodes\\":[{\\"any\\":[{\\"id\\":\\"has-visible-text\\",\\"data\\":null,\\"relatedNodes\\":[],\\"impact\\":\\"minor\\",\\"message\\":\\"Element does not have text that is visible to screen readers\\"},{\\"id\\":\\"aria-label\\",\\"data\\":null,\\"relatedNodes\\":[],\\"impact\\":\\"serious\\",\\"message\\":\\"aria-label attribute does not exist or is empty\\"},{\\"id\\":\\"aria-labelledby\\",\\"data\\":null,\\"relatedNodes\\":[],\\"impact\\":\\"serious\\",\\"message\\":\\"aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty\\"},{\\"id\\":\\"non-empty-title\\",\\"data\\":{\\"messageKey\\":\\"noAttr\\"},\\"relatedNodes\\":[],\\"impact\\":\\"serious\\",\\"message\\":\\"Element has no title attribute\\"}],\\"all\\":[],\\"none\\":[{\\"id\\":\\"focusable-no-name\\",\\"data\\":null,\\"relatedNodes\\":[],\\"impact\\":\\"serious\\",\\"message\\":\\"Element is in tab order and does not have accessible text\\"}],\\"impact\\":\\"serious\\",\\"html\\":\\"<a href=\\\\\\"#\\\\\\"></a>\\",\\"target\\":[\\"a\\"],\\"failureSummary\\":\\"Fix all of the following:\\\\n  Element is in tab order and does not have accessible text\\\\n\\\\nFix any of the following:\\\\n  Element does not have text that is visible to screen readers\\\\n  aria-label attribute does not exist or is empty\\\\n  aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty\\\\n  Element has no title attribute\\"}]},{\\"id\\":\\"landmark-one-main\\",\\"impact\\":\\"moderate\\",\\"tags\\":[\\"cat.semantics\\",\\"best-practice\\"],\\"description\\":\\"Ensures the document has a main landmark\\",\\"help\\":\\"Document should have one main landmark\\",\\"helpUrl\\":\\"https://dequeuniversity.com/rules/axe/4.3/landmark-one-main?application=axeAPI\\",\\"nodes\\":[{\\"any\\":[],\\"all\\":[{\\"id\\":\\"page-has-main\\",\\"data\\":null,\\"relatedNodes\\":[],\\"impact\\":\\"moderate\\",\\"message\\":\\"Document does not have a main landmark\\"}],\\"none\\":[],\\"impact\\":\\"moderate\\",\\"html\\":\\"<html lang=\\\\\\"en\\\\\\"><head></head><body>\\\\n\\\\n<div id=\\\\\\"dom-with-issues\\\\\\">\\\\n    <a href=\\\\\\"#\\\\\\"></a>\\\\n</div>\\\\n\\\\n\\\\n</body></html>\\",\\"target\\":[\\"html\\"],\\"failureSummary\\":\\"Fix all of the following:\\\\n  Document does not have a main landmark\\"}]},{\\"id\\":\\"page-has-heading-one\\",\\"impact\\":\\"moderate\\",\\"tags\\":[\\"cat.semantics\\",\\"best-practice\\"],\\"description\\":\\"Ensure that the page, or at least one of its frames contains a level-one heading\\",\\"help\\":\\"Page should contain a level-one heading\\",\\"helpUrl\\":\\"https://dequeuniversity.com/rules/axe/4.3/page-has-heading-one?application=axeAPI\\",\\"nodes\\":[{\\"any\\":[],\\"all\\":[{\\"id\\":\\"page-has-heading-one\\",\\"data\\":null,\\"relatedNodes\\":[],\\"impact\\":\\"moderate\\",\\"message\\":\\"Page must have a level-one heading\\"}],\\"none\\":[],\\"impact\\":\\"moderate\\",\\"html\\":\\"<html lang=\\\\\\"en\\\\\\"><head></head><body>\\\\n\\\\n<div id=\\\\\\"dom-with-issues\\\\\\">\\\\n    <a href=\\\\\\"#\\\\\\"></a>\\\\n</div>\\\\n\\\\n\\\\n</body></html>\\",\\"target\\":[\\"html\\"],\\"failureSummary\\":\\"Fix all of the following:\\\\n  Page must have a level-one heading\\"}]}]"`;

exports[`a11y Results Formatter should format using specified options: 1 1`] = `
"\\"* (document-title) Documents must have <title> element to aid in navigation: html\\"
	- Help URL: https://dequeuniversity.com/rules/axe/4.3/document-title

\\"* (link-name) Links must have discernible text: a\\"
	- Help URL: https://dequeuniversity.com/rules/axe/4.3/link-name

\\"* (landmark-one-main) Document should have one main landmark: html\\"
	- Help URL: https://dequeuniversity.com/rules/axe/4.3/landmark-one-main

\\"* (page-has-heading-one) Page should contain a level-one heading: html\\"
	- Help URL: https://dequeuniversity.com/rules/axe/4.3/page-has-heading-one"
`;

exports[`a11y Results Formatter should format using specified options: 2 1`] = `
"* (document-title) Documents must have <title> element to aid in navigation: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.3/document-title

* (link-name) Links must have discernible text: a
	- Help URL: https://dequeuniversity.com/rules/axe/4.3/link-name

* (landmark-one-main) Document should have one main landmark: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.3/landmark-one-main

* (page-has-heading-one) Page should contain a level-one heading: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.3/page-has-heading-one"
`;

exports[`a11y Results Formatter should format using specified options: 3 1`] = `
"* (document-title) Documents must have <title> element to aid in navigation: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.3/document-title

* (link-name) Links must have discernible text: a
	- Help URL: https://dequeuniversity.com/rules/axe/4.3/link-name

* (landmark-one-main) Document should have one main landmark: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.3/landmark-one-main

* (page-has-heading-one) Page should contain a level-one heading: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.3/page-has-heading-one"
`;

exports[`a11y Results Formatter should format using specified options: 4 1`] = `
"* (document-title) Documents must have <title> element to aid in navigation: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.3/document-title

* (link-name) Links must have discernible text: a
	- Help URL: https://dequeuniversity.com/rules/axe/4.3/link-name

* (landmark-one-main) Document should have one main landmark: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.3/landmark-one-main

* (page-has-heading-one) Page should contain a level-one heading: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.3/page-has-heading-one"
`;

exports[`a11y Results Formatter should not throw error for repeated violations with consolidation 1`] = `
"4 Accessibility issues found
 * (document-title) Documents must have <title> element to aid in navigation: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.3/document-title

* (link-name) Links must have discernible text: a
	- Help URL: https://dequeuniversity.com/rules/axe/4.3/link-name

* (landmark-one-main) Document should have one main landmark: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.3/landmark-one-main

* (page-has-heading-one) Page should contain a level-one heading: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.3/page-has-heading-one"
`;

exports[`a11y Results Formatter should not throw error for repeated violations with consolidation 2`] = `
"4 Accessibility issues found
 * (document-title) Documents must have <title> element to aid in navigation: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.3/document-title

* (link-name) Links must have discernible text: a
	- Help URL: https://dequeuniversity.com/rules/axe/4.3/link-name

* (landmark-one-main) Document should have one main landmark: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.3/landmark-one-main

* (page-has-heading-one) Page should contain a level-one heading: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.3/page-has-heading-one"
`;

exports[`a11y Results Formatter should throw error when violations are present 1`] = `
"4 Accessibility issues found
 * (document-title) Documents must have <title> element to aid in navigation: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.3/document-title

* (link-name) Links must have discernible text: a
	- Help URL: https://dequeuniversity.com/rules/axe/4.3/link-name

* (landmark-one-main) Document should have one main landmark: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.3/landmark-one-main

* (page-has-heading-one) Page should contain a level-one heading: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.3/page-has-heading-one"
`;
